proceso de evaluacion

--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
   <body>
     <header>
       <p>Ejercicios arreglos</p>
+      
     </header>
 
     <main>
       <p>Aqui va todo el contenido</p>
+      <div id="evaluationArea"></div>
     </main>
 
     <footer>
       <p>Este es el footer del proyecto</p>
     </footer>
+    <script src="./js/index.js"></script>
   </body>
 </html>
