--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
     <main>
       <p>Aqui va todo el contenido</p>
       <div id="evaluationArea"></div>
+      <br>
+      <p>La calificacion media de los lugares es:</p>
+      <div id="calificacion-media"></div>
     </main>
 
     <footer>
       <p>Este es el footer del proyecto</p>
     </footer>
     <script src="./js/index.js"></script>
+    <script src="./js/ejercicio.js"></script>
   </body>
 </html>
