se agrega comentario de andrea

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <main>
       <p>Aqui va todo el contenido</p>
-      <div id="evaluationArea"></div>
+      <div id="evaluation-area"></div>
       <br>
       <p>La calificacion media de los lugares es:</p>
       <div id="calificacion-media"></div>
